--- a/TrabalhodeMobile2/app/src/main/AndroidManifest.xml
+++ b/TrabalhodeMobile2/app/src/main/AndroidManifest.xml
@@ -7,18 +7,11 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="Tech tree"
+        android:label="Tech tree pre-alpha 0.1"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TrabalhoDeMobile"
         tools:targetApi="31" >
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" >
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
         <activity
             android:name=".Core.LoginActivity"
             android:exported="false" >
@@ -34,7 +27,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".Core.StartActivity"
+            android:name=".Core.MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
