--- a/TrabalhodeMobile2/app/src/main/AndroidManifest.xml
+++ b/TrabalhodeMobile2/app/src/main/AndroidManifest.xml
@@ -7,20 +7,21 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="Tech tree pre-alpha 0.1"
+        android:label="Tech tree pre-alpha 0.3"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TrabalhoDeMobile"
         tools:targetApi="31">
         <activity
-            android:name=".PartPickerActivity"
+            android:name=".PartPicker.PartPickerActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".RigBuilderActivity"
+            android:name=".RigBuilder.RigBuilderActivity"
+            android:parentActivityName=".Core.MainActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
