--- a/TrabalhodeMobile2/app/src/main/AndroidManifest.xml
+++ b/TrabalhodeMobile2/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="Tech tree pre-alpha 0.5"
+        android:label="Tech tree alpha 0.1"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TrabalhoDeMobile"
