--- a/TrabalhodeMobile2/app/src/main/AndroidManifest.xml
+++ b/TrabalhodeMobile2/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:theme="@style/Theme.TrabalhoDeMobile"
         tools:targetApi="31">
         <activity
+            android:name=".PartPicker.CpuSelectorActivity"
+            android:exported="false"
+            android:parentActivityName=".PartPicker.PartPickerActivity">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".PartPicker.GpuSelectorActivity"
             android:exported="false"
             android:parentActivityName=".PartPicker.PartPickerActivity">
